# rules_apko

./: .bazelrc  .bazelversion  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  BUILD.bazel  CLAUDE.md  CONTRIBUTING.md  DESCRIPTION  MODULE.bazel  README.md  apk_fetch_helper.py  resolve-all.sh  resolve.sh
.apko/: .bazelrc  .bazelrc.apko  range.sh
.bcr/: metadata.template.json  source.template.json
.github/: dependabot.yml
.github/chainguard/: release.sts.yaml  update-apko.sts.yaml
.github/workflows/: actionlint.yaml  buildifier.yaml  ci.yaml  conventional-commits.yaml  publish.yaml  release.yaml  release.yml  release_prep.sh  tag.yaml  update-apko.yaml  update-apko.yml  zizmor.yaml
apko/: BUILD.bazel  defs.bzl  extensions.bzl  repositories.bzl  toolchain.bzl  translate.bzl  translate_lock.bzl  util.bzl
apko/keys/: BUILD.bazel
apko/private/: BUILD.bazel  apk.bzl  apko_config.bzl  apko_config.tmpl.sh  apko_image.bzl  apko_lock.bzl  apko_run.bzl  apko_show_config.bzl  bazelversion.bzl  image_config.bzl  resolved_toolchain.bzl  toolchains_repo.bzl  util.bzl  versions.bzl  yaml.bzl
apko/private/range/: BUILD.bazel  bazelrc.bzl  range.bazelrc  range.sh
apko/tests/: BUILD.bazel  keyring_test.bzl  util_test.bzl  versions_test.bzl
base_image/: BUILD.bazel  WORKSPACE.bazel  apko.config.yaml  apko.lock.json
base_image/python_apkindex/: Readme.md
base_image/python_apkindex/aarch64/: APKINDEX
docs/: BUILD.bazel  apko-cache.md  initial-setup.md  rules.md  translate_lock.md
e2e/local_keyring/: BUILD  MODULE.bazel  README.md  WORKSPACE.bazel  apko.lock.json
e2e/local_keyring/keys/: BUILD.bazel  rules-apko-e2e-local.rsa.pub
e2e/smoke/: .bazelrc  BUILD  MODULE.bazel  README.md  WORKSPACE.bazel  apko.lock.json  apko.resolved.json  apko.yaml  apko_config.bzl  environment_only.apko.yaml  test.sh
e2e/smoke/.apko/: .bazelrc
e2e/smoke/keyring_content/: BUILD  apko.lock.json
e2e/smoke/multifile_config/: BUILD  apko.generated.lock.json  base_config.apko.lock.json  expected_expanded_config.yaml  final_config.apko.yaml  intermediate_config.apko.yaml
examples/: lock.sh  resolve.sh
examples/lock/: BUILD.bazel  apko.lock.json  apko.resolved.json  apko.yaml
examples/multi_arch_and_repo/: BUILD.bazel  apko.lock.json  apko.resolved.json  apko.yaml  test.yaml
examples/oci/: BUILD.bazel  apko.lock.json  apko.resolved.json  apko.yaml  say_hello.sh  test.yaml
examples/simple/: BUILD.bazel
examples/wolfi-base/: BUILD.bazel  apko.lock.json  apko.resolved.json  apko.yaml
scripts/: README.md  filter_apko.jq  mirror_apko.sh  update_locks.sh
