"Bazel dependencies"

module(
    name = "rules_apko",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.4.1")
bazel_dep(name = "platforms", version = "0.0.5")

bazel_dep(name = "gazelle", version = "0.29.0", dev_dependency = True, repo_name = "bazel_gazelle")
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.4.1", dev_dependency = True)
bazel_dep(name = "aspect_bazel_lib", version = "1.32.1", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "6.1.0", dev_dependency = True)

apko = use_extension("//apko:extensions.bzl", "apko")

apko.toolchain(apko_version = "v0.10.0")
use_repo(apko, "apko_toolchains")
register_toolchains("@apko_toolchains//:all")

apko.translate_lock(
    name = "example_lock",
    lock = "//examples/lock:apko.lock.json"
)
use_repo(apko, "example_lock")