load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "apk",
    srcs = ["apk.bzl"],
    visibility = ["//apko:__subpackages__"],
    deps = [
        ":util",
        "@aspect_bazel_lib//lib:base64",
    ],
)

bzl_library(
    name = "apko_image",
    srcs = ["apko_image.bzl"],
    visibility = ["//apko:__subpackages__"],
    deps = [
        "apko_run",
        "@bazel_skylib//lib:paths",
    ],
)

bzl_library(
    name = "apko_run",
    srcs = ["apko_run.bzl"],
    visibility = ["//apko:__subpackages__"],
)

bzl_library(
    name = "resolved_toolchain",
    srcs = ["resolved_toolchain.bzl"],
    visibility = ["//apko:__subpackages__"],
)

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = ["//apko:__subpackages__"],
)

bzl_library(
    name = "util",
    srcs = ["util.bzl"],
    visibility = ["//apko:__subpackages__"],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//apko:__subpackages__"],
)
