load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(srcs = ["apko_config.tmpl.sh"])

bzl_library(
    name = "apko_config",
    srcs = ["apko_config.bzl"],
    visibility = ["//apko:__subpackages__"],
)

bzl_library(
    name = "apk",
    srcs = ["apk.bzl"],
    visibility = ["//apko:__subpackages__"],
    deps = [
        ":util",
        "@aspect_bazel_lib//lib:base64",
    ],
)

bzl_library(
    name = "apko_image",
    srcs = ["apko_image.bzl"],
    visibility = ["//apko:__subpackages__"],
    deps = [
        "apko_run",
        ":apko_config",
        "@bazel_skylib//lib:paths",
        "@bazel_skylib//lib:versions",
    ],
)

bzl_library(
    name = "apko_run",
    srcs = ["apko_run.bzl"],
    visibility = ["//apko:__subpackages__"],
    deps = [":apko_config"],
)

bzl_library(
    name = "apko_lock",
    srcs = ["apko_lock.bzl"],
    visibility = ["//apko:__subpackages__"],
    deps = [":apko_run"],
)

bzl_library(
    name = "resolved_toolchain",
    srcs = ["resolved_toolchain.bzl"],
    visibility = ["//apko:__subpackages__"],
)

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = ["//apko:__subpackages__"],
)

bzl_library(
    name = "util",
    srcs = ["util.bzl"],
    visibility = ["//apko:__subpackages__"],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//apko:__subpackages__"],
)

bzl_library(
    name = "bazelversion",
    srcs = ["bazelversion.bzl"],
    visibility = ["//apko:__subpackages__"],
)
