load("@rules_apko//apko:defs.bzl", "apko_image")
load("@bazel_skylib//rules:build_test.bzl", "build_test")

apko_image(
    name = "lock",
    config = "apko.yaml",
    packages = "@examples_lock//:packages",
    tag = "lock:latest",
)

build_test(
    name = "test",
    targets = [
        ":lock",
    ],
)
