load("@rules_apko//apko:defs.bzl", "apko_image")
load("@bazel_skylib//rules:build_test.bzl", "build_test")

# An example demonstrating how to use alpine packages with a lock file.
# See MODULE.bazel for how apko.resolved.json is translated to @examples_lock//:contents
apko_image(
    name = "lock",
    config = "apko.yaml",
    contents = "@examples_lock//:contents",
    tag = "lock:latest",
)

build_test(
    name = "test",
    targets = [
        ":lock",
    ],
)
