load("@rules_apko//apko:defs.bzl", "apko_image")
load("@container_structure_test//:defs.bzl", "container_structure_test")

# An example demonstrating how to use multi architecture alpine packages with a lock file.
# See MODULE.bazel for how apko.lock.json is translated to @examples_multi_arch_and_repo//:contents
apko_image(
    name = "image",
    architecture = select({
        "@platforms//cpu:arm64": "arm64",
        "@platforms//cpu:x86_64": "amd64",
    }),
    config = "apko.yaml",
    contents = "@examples_multi_arch_and_repo//:contents",
    tag = "multi_arch_and_repo:latest",
)

container_structure_test(
    name = "test",
    configs = ["test.yaml"],
    image = ":image",
)
