load("@rules_apko//apko:defs.bzl", "apko_image")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@container_structure_test//:defs.bzl", "container_structure_test")

# An example demonstrating how to use apko_image with rules_oci
# See MODULE.bazel for how apko.lock.json is translated to @examples_oci//:contents
apko_image(
    name = "wolfi-base",
    args = select({
        "@platforms//cpu:arm64": [
            "--arch",
            "aarch64",
        ],
        "@platforms//cpu:x86_64": [
            "--arch",
            "x86_64",
        ],
    }),
    config = "apko.yaml",
    packages = "@examples_oci//:contents",
    tag = "wolfi:latest",
)

pkg_tar(
    name = "layer",
    srcs = ["say_hello.sh"],
)

oci_image(
    name = "image",
    base = ":wolfi-base",
    cmd = ["/say_hello.sh"],
    tars = [
        ":layer",
    ],
)

oci_tarball(
    name = "tarball",
    image = ":image",
    repo_tags = ["apko_oci:latest"],
)

container_structure_test(
    name = "test",
    configs = ["test.yaml"],
    image = ":image",
)
