load("@rules_apko//apko:defs.bzl", "apko_image")
load("@bazel_skylib//rules:build_test.bzl", "build_test")

# A simplified example demonstrating how to use apko_image
# This avoids integration issues with rules_oci in the 0.27.2 update
apko_image(
    name = "wolfi-base",
    # Use a consistent architecture
    architecture = "amd64",
    config = "apko.yaml",
    contents = "@examples_oci//:contents",
    tag = "wolfi-oci:latest",
)

# Create a simple test that verifies the image builds
build_test(
    name = "test",
    targets = [
        ":wolfi-base",
    ],
)
