load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files([
    "range.bazelrc",
    "range.sh",
])

bzl_library(
    name = "bazelrc",
    srcs = ["bazelrc.bzl"],
    visibility = ["//apko:__subpackages__"],
    deps = [
        "@aspect_bazel_lib//lib:write_source_files",
        "@bazel_skylib//rules:expand_template",
    ],
)
